--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@mui/material": "^5.6.1",
+    "autoprefixer": "^10.4.4",
+    "moralis": "^1.5.9",
     "next": "12.1.4",
+    "postcss": "^8.4.12",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-confetti": "^6.0.1",
+    "react-dom": "18.0.0",
+    "react-moralis": "^1.3.5",
+    "react-use": "^17.3.2",
+    "tailwindcss": "^3.0.23",
+    "web3uikit": "^0.1.120"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
